--- a/SBI/builder.yml
+++ b/SBI/builder.yml
@@ -10,6 +10,6 @@ services:
       - "${JENKINS_HOME}:${JENKINS_HOME}:rw"
       - "${WORKSPACE}:${WORKSPACE}:rw"
      environment:
-      REGION=$REGION
-      AMI_NAME=$AMI_NAME
-      DESCRIPTION=$DESCRIPTION
+      REGION: $REGION
+      AMI_NAME: $AMI_NAME
+      DESCRIPTION: $DESCRIPTION
